--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb://localhost:27017/payslipdb
+MONGO_URI=mongodb+srv://hari:hari@cluster0.l0tjkhr.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
